#
# Copyright 2017 The Abseil Authors.
#
# Licensed under the Apache License Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing software
# distributed under the License is distributed on an "AS IS" BASIS
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

file(GLOB TIME_PUBLIC_HEADERS "*.h")
file(GLOB TIME_INTERNAL_HEADERS "internal/*.h")

list(APPEND TIME_SRC
    "time.cc"
    "clock.cc"
    "duration.cc"
    "format.cc"
    ${TIME_PUBLIC_HEADERS}
    ${TIME_INTERNAL_HEADERS}
)
if (TARGET google-cctz)
  message("SHIT")

endif()
set(TIME_PUBLIC_LIBRARIES base stacktrace int128 ${CCTZ_LIBRARIES})

abseil_library(time STATIC)


install(FILES ${TIME_PUBLIC_HEADERS}
        DESTINATION ${CMAKE_INSTALL_FULL_INCLUDEDIR}/absl/time)
install(FILES ${TIME_INTERNAL_HEADERS}
        DESTINATION ${CMAKE_INSTALL_FULL_INCLUDEDIR}/absl/time/internal)


#
## TESTS
#

# test time_test
list(APPEND TIME_TEST_SRC
    "time_test.cc"
    "clock_test.cc"
    "duration_test.cc"
    "format_test.cc"
    "time_norm_test.cc"
    "time_test.cc"
    "time_zone_test.cc"
    "internal/test_util.cc"
)
set(TIME_TEST_PUBLIC_LIBRARIES time)

abseil_test(time_test)


